# WinTermDriver

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md  WINTERMDRIVER_SPEC.md
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  release.yml
crates/eval-renderer/: Cargo.toml
crates/eval-renderer/examples/: bench_directwrite.rs
crates/eval-renderer/src/: lib.rs
crates/screenshot-gen/: Cargo.toml
crates/screenshot-gen/src/: main.rs
crates/wtd-cli/: Cargo.toml
crates/wtd-cli/src/: cli.rs  client.rs  dispatch.rs  exit_code.rs  input_bytes.rs  lib.rs  main.rs  output.rs
crates/wtd-cli/tests/: cli_ipc_integration.rs  e2e_commands.rs  gate_m2_acceptance.rs  gate_open_list_panes.rs  gate_s2_all_commands.rs  gate_s5_cli_to_host.rs  gate_send_capture.rs  test_request_timeout.rs
crates/wtd-core/: Cargo.toml
crates/wtd-core/src/: error.rs  global_settings.rs  ids.rs  layout.rs  lib.rs  logging.rs  profile_resolver.rs  recipe.rs  target.rs  workspace.rs  workspace_discovery.rs  workspace_loader.rs
crates/wtd-core/tests/: preset_integration_tests.rs
crates/wtd-host/: Cargo.toml
crates/wtd-host/src/: action.rs  backoff.rs  host_lifecycle.rs  ipc_server.rs  lib.rs  main.rs  output_broadcaster.rs  pipe_security.rs  prompt_driver.rs  request_handler.rs  session.rs  target_resolver.rs  terminal_input.rs  workspace_instance.rs
crates/wtd-host/tests/: capture_extended_test.rs  gate_capability_negotiation.rs  gate_inline_images.rs  gate_ipc_round_trip.rs  gate_keyboard_probe_acceptance.rs  gate_keyboard_protocol_matrix.rs  gate_m1_acceptance.rs  gate_m6_diagnostics.rs  gate_m6_performance.rs  gate_m7_acceptance.rs  gate_m8_acceptance.rs  gate_non_us_keyboard_probe.rs  gate_osc8_hyperlinks.rs  gate_pi_acceptance.rs  gate_probe_harness.rs  gate_s5_action_dispatch.rs  gate_s5_ui_session_output.rs  gate_tui_fidelity.rs  gate_yaml_to_conpty.rs  host_lifecycle_test.rs  ipc_server_test.rs  session_test.rs  test_action_dispatch.rs  test_attach_snapshot.rs  test_file_path_open.rs  test_output_broadcaster.rs  test_real_handler.rs
crates/wtd-host/tests/fixtures/: simple-workspace.yaml  split-workspace.yaml
crates/wtd-host/tests/support/: probe_harness.rs
crates/wtd-ipc/: Cargo.toml
crates/wtd-ipc/src/: connect.rs  error.rs  framing.rs  lib.rs  message.rs
crates/wtd-ipc/tests/: framing.rs  protocol_examples.rs  roundtrip.rs
crates/wtd-probe/: Cargo.toml
crates/wtd-probe/src/: main.rs
crates/wtd-pty/: Cargo.toml
crates/wtd-pty/src/: error.rs  handle.rs  job.rs  lib.rs  pty.rs  screen.rs
crates/wtd-pty/tests/: pty_session.rs  vt_round_trip.rs
crates/wtd-pty/tests/fixtures/: ftui_widget_gallery.txt  ftui_widget_gallery.vt
crates/wtd-ui/: Cargo.toml
crates/wtd-ui/examples/: crossterm_probe.rs
crates/wtd-ui/src/: clipboard.rs  command_palette.rs  host_bridge.rs  host_client.rs  input.rs  lib.rs  main.rs  mouse_handler.rs  paint_scheduler.rs  pane_layout.rs  prefix_state.rs  renderer.rs  snapshot.rs  status_bar.rs  tab_strip.rs  window.rs
crates/wtd-ui/tests/: gate_command_palette_clipboard.rs  gate_host_to_pane.rs  gate_m3_acceptance.rs  gate_m4_acceptance.rs  gate_m5_acceptance.rs  gate_m6_acceptance.rs  gate_non_us_keyboard.rs  gate_prefix_chords_and_mouse.rs  gate_status_bar_failed_pane.rs  gate_tab_pane_focus.rs  gate_typing_and_bindings.rs  host_ipc_test.rs  pane_layout_tests.rs  render_prototype.rs  tab_strip_tests.rs
docs/: AGENT_GUIDE.md  AGENT_HOST_COMPATIBILITY.md  WT_KEYBINDING_MAP.md  wt_preset_bindings.json
docs/decisions/: 001-rendering-technology.md
docs/operations/: AGENT_INSPIRED_WORKSET.md  AGENT_NOTIFICATION_COMPATIBILITY.md  AGENT_NOTIFICATION_HOOKS.md  BEADS_BREAKDOWN_EXAMPLE.md  BEADS_WORKING_METHOD.md  CMUX_INSPIRED_WORKSET.md  GPT55_DOCS_UPDATE.md  PI_AGENT_INTEGRATION_REVIEW.md  PI_WTD_EXTENSION_PATTERN.md  PLANNED_ADDITIONS_OVERVIEW.md  PROFILE_AND_KEYBINDING_DISCOVERY.md  PROJECT_RECIPES.md  RESTORE_REGRESSION_SUITE.md  SOLOTERM_REVIEW.md  TERMINAL_POLISH_BACKLOG.md  TMUX_COMPATIBILITY.md
docs/protocol/: WTD_HOST_CONTROL_PROTOCOL.md
docs/protocol/examples/: v1-current-envelopes.json
logs/: .gitignore
tools/: MEMORY.md  Run-WtdCrosstermProbe.ps1  bead-instructions.md  bead-runner.sh  create-agent-host-beads.ps1  package-release.sh  run-agent-host-diagnostics.ps1
tools/agent-hooks/: test-agent-hooks.ps1  wtd-agent-event.ps1  wtd-agent-event.sh
tools/agent-hooks/pi/: README.md  wtd-pi-event.ps1  wtd-pi-event.sh
tools/tmux-shim/: README.md  test-wtd-tmux.ps1  wtd-tmux.ps1  wtd-tmux.sh
