[package]
name = "screenshot-gen"
description = "Generate documentation screenshots for WinTermDriver"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "screenshot-gen"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
wtd-core = { workspace = true }
wtd-pty = { workspace = true }
wtd-ui = { path = "../wtd-ui" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
