[package]
name = "wtd-cli"
description = "WinTermDriver controller CLI — sends commands to wtd-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "wtd_cli"
path = "src/lib.rs"

[[bin]]
name = "wtd"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wtd-core = { workspace = true }
wtd-ipc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
wtd-host = { path = "../wtd-host" }
wtd-pty = { path = "../wtd-pty" }
