[package]
name = "wtd-host"
description = "WinTermDriver host process — manages workspace instances, PTY sessions, and IPC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "wtd_host"
path = "src/lib.rs"

[[bin]]
name = "wtd-host"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
wtd-core = { workspace = true }
wtd-ipc = { workspace = true }
wtd-pty = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
