[package]
name = "wtd-ui"
description = "WinTermDriver UI process — graphical window, tab strip, pane rendering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "wtd-ui"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
wtd-core = { workspace = true }
wtd-ipc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
