[package]
name = "wtd-ui"
description = "WinTermDriver UI process — graphical window, tab strip, pane rendering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "wtd_ui"
path = "src/lib.rs"

[[bin]]
name = "wtd-ui"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wtd-core = { workspace = true }
wtd-ipc = { workspace = true }
wtd-pty = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
wtd-host = { path = "../wtd-host" }
